# orcs

./: .gitignore  ADDITIONAL_ICON_FIXES.md  AGENT.md  Cargo.toml  Cargo.toml.sample  ICON_SYSTEM_INVESTIGATION.md  Makefile  PLUS_BUTTON_INVESTIGATION.md  README.md  UI_IMPROVEMENTS_FOR_RELEASE.md
.config/orcs/: secret.json.example
.github/workflows/: release.yml
crates/orcs-application/: Cargo.toml
crates/orcs-application/src/: adhoc_persona_service.rs  lib.rs  session_support_agent_service.rs  session_usecase.rs  ui_text_agent_service.rs  utility_agent_service.rs
crates/orcs-application/src/session/: cache.rs  factory.rs  manager.rs  manager_test.rs  metadata_service.rs  mod.rs  updater.rs
crates/orcs-cli/: Cargo.toml
crates/orcs-cli/src/: main.rs
crates/orcs-cli/src/commands/: build.rs  dev.rs  mod.rs  schema.rs  utils.rs  version.rs
crates/orcs-core/: Cargo.toml  build.rs
crates/orcs-core/src/: app_state.rs  config.rs  error.rs  lib.rs  repository.rs  schema.rs  secret.rs  session.rs  session_manager.rs  session_storage.rs  user_service.rs
crates/orcs-core/src/agent/: builder.rs  config.rs  env.rs  mod.rs  web_search.rs
crates/orcs-core/src/dialogue/: mod.rs  preset.rs  repository.rs
crates/orcs-core/src/memory/: mod.rs
crates/orcs-core/src/persona/: mod.rs  model.rs  preset.rs  repository.rs  request.rs
crates/orcs-core/src/quick_action/: mod.rs  model.rs  repository.rs
crates/orcs-core/src/search/: mod.rs  model.rs  service.rs
crates/orcs-core/src/session/: app_mode.rs  event.rs  interaction_manager_trait.rs  manager.rs  manager_test.rs  message.rs  metadata_service.rs  mod.rs  model.rs  repository.rs  trait.rs  updater.rs  user_input.rs
crates/orcs-core/src/slash_command/: builtin.rs  mod.rs  model.rs  repository.rs  request.rs
crates/orcs-core/src/state/: model.rs  repository.rs
crates/orcs-core/src/task/: mod.rs  model.rs  repository.rs
crates/orcs-core/src/user/: mod.rs  model.rs  service.rs
crates/orcs-core/src/workspace/: manager.rs  metadata_repository.rs  mod.rs  model.rs  repository.rs
crates/orcs-core/tests/: generate_typescript_types.rs
crates/orcs-execution/: Cargo.toml
crates/orcs-execution/src/: lib.rs  tracing_layer.rs
crates/orcs-infrastructure/: Cargo.toml
crates/orcs-infrastructure/src/: app_state_service.rs  async_dir_dialogue_preset_repository.rs  async_dir_persona_repository.rs  async_dir_session_repository.rs  async_dir_slash_command_repository.rs  async_dir_task_repository.rs  async_dir_workspace_metadata_repository.rs  async_dir_workspace_repository.rs  config_service.rs  dto.rs  lib.rs  migration.rs  paths.rs  quick_action_repository.rs  repository.rs  secret_service.rs  state_repository.rs  storage_repository.rs  test_async_dir_storage.rs  toml_persona_repository.rs  toml_session_repository.rs  toml_storage.rs  toml_workspace_metadata_repository.rs  user_service.rs  workspace_manager.rs  workspace_storage_service.rs
crates/orcs-infrastructure/src/dto/: app_state.rs  config_root.rs  dialogue_preset.rs  mod.rs  persona.rs  quick_action.rs  secret.rs  session.rs  slash_command.rs  task.rs  uploaded_file.rs  user_profile.rs  workspace.rs  workspace_metadata.rs
crates/orcs-infrastructure/src/migration/: entity.rs  manager.rs  mod.rs  persona.rs  registry.rs  session.rs  traits.rs
crates/orcs-infrastructure/src/search/: mod.rs  ripgrep_search.rs
crates/orcs-infrastructure/src/storage/: atomic_toml.rs  config_storage.rs  mod.rs  persona_migrator.rs  secret_storage.rs
crates/orcs-interaction/: Cargo.toml
crates/orcs-interaction/src/: claude_api_agent.rs  config.rs  gemini_api_agent.rs  kaiba_api_agent.rs  kaiba_memory_sync.rs  lib.rs  openai_api_agent.rs  persona_agent.rs  personas.rs  presets.rs  supported_models.rs
crates/orcs-interaction/src/local_agents/: claude_code.rs  gemini.rs  mod.rs
crates/orcs-interaction/tests/: test_personas.rs
crates/orcs-readline/: Cargo.toml
crates/orcs-readline/src/: main.rs
crates/orcs-types/: Cargo.toml
crates/orcs-types/src/: lib.rs  session_dto.rs
docs/: ARCHITECTURE.md
docs/Design/: context-mode.md  tab-rendering-optimization.md
docs/guides/: ai-file-save-usage.md  schema-change-checklist.md  slash-command-implementation.md  tauri-command-workflow.md
docs/proposals/: ai-code-snippet-save-feature.md  conversation-moderator-agent.md  interaction-event-pipeline.md
docs/specs/: app-state-event-design.md  default-workspace.md  service-layer-and-state-sync-design.md  session-list-ui-v3.1.0.md  tab-close-active-session.md  workspace-panel-ui-spec.md
docs/system-prompts/: file-save-capability.md
orcs-desktop/: .tool-versions  package-lock.json  package.json
orcs-desktop/docs/guides/: schema-change-checklist.md
orcs-desktop/src/: App.css  App.tsx  main.tsx  theme.ts
orcs-desktop/src-tauri/: Cargo.toml  tauri.conf.json
orcs-desktop/src-tauri/capabilities/: default.json
orcs-desktop/src-tauri/icons/: icon.icns
orcs-desktop/src-tauri/src/: lib.rs  main.rs  slash_commands.rs
orcs-desktop/src-tauri/src/app/: bootstrap.rs  mod.rs  state.rs
orcs-desktop/src-tauri/src/commands/: ai.rs  app_state.rs  dialogue_presets.rs  files.rs  git.rs  mod.rs  paths.rs  personas.rs  quick_actions.rs  search.rs  session.rs  slash_commands.rs  tasks.rs  user.rs  workspaces.rs
orcs-desktop/src/ai/: README.md  index.ts
orcs-desktop/src/bindings/: generated.ts
orcs-desktop/src/context/: SessionContext.tsx  TabContext.tsx  WorkspaceContext.tsx
orcs-desktop/src/hooks/: useSession.ts  useSessions.ts  useSlashCommands.ts  useWorkspace.ts
orcs-desktop/src/services/: conversationModeService.ts  executionStrategyService.ts  talkStyleService.ts
orcs-desktop/src/stores/: appStateStore.ts  debugStore.ts  personaStore.ts  sessionSettingsStore.ts  taskStore.ts  workspaceStore.ts
orcs-desktop/src/test/: setup.ts
orcs-desktop/src/types/: agent.ts  command.ts  conversation.ts  git.ts  message.ts  persona_request.ts  quick_action.ts  search.ts  session.ts  session_event.ts  slash_command.ts  status.ts  task.ts  (+1 more)
workspace/: SESSION_TAB_ARCHITECTURE.md
(+41 files in other folders)
