[workspace]
resolver = "2"
members = [
    "crates/orcs-interaction",
    "crates/orcs-core",
    "crates/orcs-execution",
    "orcs-desktop/src-tauri",
    "crates/orcs-infrastructure",
]

[workspace.package]
version = "0.1.0"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ynishi/orcs"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
llm-toolkit = { version = "0.37.0", features = ["agent"] }
llm-toolkit-macros = { version = "0.37.0" }
version-migrate = "0.5.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.27.0"
crossterm = "0.27.0"
rustyline = "14.0"
colored = "2.0"
regex = "1.10"
log = "0.4"
minijinja = { version = "2.12.0", features = ["serde_json", "unstable_machinery"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
quick-xml = { version = "0.38.3", features = ["serde"] }
rand = "0.8"
futures = "0.3"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
tempfile = "3.0"
once_cell = "1.20"
