[workspace]
resolver = "2"
members = [
    "crates/orcs-interaction",
    "crates/orcs-core",
    "crates/orcs-execution",
    "orcs-desktop/src-tauri",
    "crates/orcs-infrastructure", "crates/orcs-application",
]

[workspace.package]
version = "0.1.0"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ynishi/orcs"
description = "ORCS - Orchestrated Reasoning and Collaboration System"
documentation = "https://github.com/ynishi/orcs"
readme = "README.md"
keywords = ["ai", "llm", "reasoning"]
categories = ["development-tools"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
thiserror = "1.0"
toml = "0.8"
# IMPORTANT: llm-toolkit version update procedure:
# 1. Verify the target version exists on crates.io: https://crates.io/crates/llm-toolkit
# 2. Update the version number below
# 3. Run `cargo update -p llm-toolkit -p llm-toolkit-macros`
# 4. NEVER use path dependencies like: path = "workspace/llm-toolkit/..."
# TEMPORARY: Using local workspace version for Capability feature development
llm-toolkit = { path = "workspace/llm-toolkit/crates/llm-toolkit", features = ["agent"] }
llm-toolkit-macros = { path = "workspace/llm-toolkit/crates/llm-toolkit-macros" }
# IMPORTANT: NEVER use path dependencies for version-migrate. Always use version from crates.io.
# DO NOT change to: path = "version-migrate/..."
version-migrate = { version = "0.15.0", features = ["async"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
ratatui = "0.27.0"
crossterm = "0.27.0"
rustyline = "14.0"
colored = "2.0"
regex = "1.10"
log = "0.4"
minijinja = { version = "2.12.0", features = ["serde_json", "unstable_machinery"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
quick-xml = { version = "0.38.3", features = ["serde"] }
rand = "0.8"
futures = "0.3"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
tempfile = "3.0"
once_cell = "1.20"
tracing = "0.1"
