[package]
name = "orcs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
orcs-types = { path = "../orcs-types" }
uuid = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
