[package]
name = "orcs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
llm-toolkit = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
chrono = { workspace = true }
thiserror = { workspace = true }
version-migrate = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
