[package]
name = "orcs-execution"
version = "0.1.0"
edition = "2024"

[dependencies]
orcs-core = { path = "../orcs-core" }
orcs-interaction = { path = "../orcs-interaction" }
llm-toolkit = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
