[package]
name = "orcs-execution"
version.workspace = true
edition = "2024"

[dependencies]
orcs-core = { path = "../orcs-core" }
orcs-application = { path = "../orcs-application" }
orcs-interaction = { path = "../orcs-interaction" }
llm-toolkit = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
