[package]
name = "orcs-infrastructure"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orcs-core = { path = "../orcs-core" }
llm-toolkit = { workspace = true }
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
uuid = { workspace = true, features = ["v5"] }
tracing = "0.1"
chrono = "0.4"
version-migrate = { workspace = true }
version-migrate-macro = { workspace = true }
tokio = { version = "1", features = ["fs", "io-util"] }
fs2 = "0.4"
mime_guess = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3.8"
