[package]
name = "orcs-interaction"
version = "0.1.0"
edition = "2024"

[dependencies]
orcs-types = { path = "../orcs-types" }
orcs-core = { path = "../orcs-core" }
llm-toolkit = { workspace = true }
llm-toolkit-macros = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
orcs-infrastructure = { path = "../orcs-infrastructure" }
tokio = { workspace = true, features = ["macros", "rt"] }
