[package]
name = "orcs-interaction"
version = "0.1.0"
edition = "2024"

[dependencies]
orcs-core = { path = "../orcs-core" }
orcs-infrastructure = { path = "../orcs-infrastructure" }
llm-toolkit = { workspace = true }
llm-toolkit-macros = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
base64 = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3.8"
