[package]
name = "orcs-readline"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
orcs-core = { path = "../orcs-core" }
orcs-execution = { path = "../orcs-execution" }
orcs-infrastructure = { path = "../orcs-infrastructure" }
orcs-interaction = { path = "../orcs-interaction" }
orcs-types = { path = "../orcs-types" }
tokio = { workspace = true }
rustyline = { workspace = true }
colored = { workspace = true }
