[package]
name = "orcs-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
llm-toolkit = { workspace = true, features = ["agent"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
serde_json = { workspace = true }
