[package]
name = "orcs-desktop"
version = "0.1.0"
description = "ORCS Desktop - AI-powered workspace management application"
authors = ["Yutaka Nishimura"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orcs_desktop_react_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true }
dirs = "5.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
base64 = { workspace = true }
orcs-core = { path = "../../crates/orcs-core" }
orcs-execution = { path = "../../crates/orcs-execution" }
orcs-infrastructure = { path = "../../crates/orcs-infrastructure" }
orcs-interaction = { path = "../../crates/orcs-interaction" }
orcs-application = { path = "../../crates/orcs-application" }
llm-toolkit = { workspace = true }
